# kanboard-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.ralphi/: config.yaml  prd.json  progress.txt
.ralphi/archive/2026-03-22-milestone-2-core/: prd.json  progress.txt
.ralphi/archive/2026-03-22-milestone-3-extended/: prd.json  progress.txt
.ralphi/archive/2026-03-22-milestone-4-ship/: prd.json
.ralphi/archive/2026-03-23-phase-0-cross-project-orchestration/: prd.json  progress.txt
.ralphi/archive/2026-03-24-phase-0-cross-project-orchestration/: prd.json
docker/: Dockerfile.kanboard-plugin-test
docs/: cli-reference.md  configuration.md  sdk-guide.md  workflows.md
docs/design/: cross-project-orchestration.md
docs/plan/: 01-architecture.md  02-api-reference.md  03-milestone-1-foundation.md  04-milestone-2-core.md  05-milestone-3-extended.md  06-milestone-4-ship.md  07-appendices.md  README.md
docs/tasks/: phase-0-cross-project-orchestration.md  phase-1-dual-backend-orchestration.md
scripts/: bump_version.py
sdk/: README.md  pyproject.toml
src/kanboard/: __init__.py  client.py  config.py  exceptions.py  models.py
src/kanboard/orchestration/: __init__.py  backend.py  dependencies.py  portfolio.py  store.py
src/kanboard/resources/: __init__.py  actions.py  application.py  board.py  categories.py  columns.py  comments.py  external_task_links.py  group_members.py  groups.py  links.py  me.py  milestones.py  portfolios.py  project_files.py  project_metadata.py  project_permissions.py  projects.py  subtask_time_tracking.py  subtasks.py  swimlanes.py  tags.py  task_files.py  task_links.py  task_metadata.py  tasks.py  users.py
src/kanboard_cli/: __init__.py  formatters.py  main.py  renderers.py  workflow_loader.py
src/kanboard_cli/commands/: __init__.py  action.py  app_info.py  board.py  category.py  column.py  comment.py  completion.py  config_cmd.py  external_link.py  group.py  link.py  me.py  milestone.py  portfolio.py  project.py  project_access.py  project_file.py  project_meta.py  subtask.py  swimlane.py  tag.py  task.py  task_file.py  task_link.py  task_meta.py  timer.py  user.py
src/kanboard_cli/workflows/: __init__.py  base.py
tests/: conftest.py  test_smoke.py
tests/cli/: test_action.py  test_app_info.py  test_board.py  test_category.py  test_column.py  test_comment.py  test_completion.py  test_config.py  test_external_link.py  test_formatters.py  test_group.py  test_group_member.py  test_link.py  test_main.py  test_me.py  test_milestone.py  test_output_snapshots.py  test_portfolio.py  test_project.py  test_project_access.py  test_project_file.py  test_project_meta.py  test_subtask.py  test_swimlane.py  test_tag.py  test_task.py  test_task_file.py  test_task_link.py  test_task_meta.py  test_timer.py  test_user.py  test_workflow.py
tests/integration/: conftest.py  test_core_resources.py  test_extended_resources.py  test_plugin_backend.py  test_secondary_resources.py  test_smoke.py
tests/unit/: test_base_workflow.py  test_client.py  test_config.py  test_exceptions.py  test_models.py  test_renderers.py  test_workflow_loader.py
tests/unit/orchestration/: conftest.py  test_backend.py  test_dependencies.py  test_portfolio.py  test_store.py
tests/unit/resources/: test_actions.py  test_application.py  test_board.py  test_categories.py  test_columns.py  test_comments.py  test_external_task_links.py  test_group_members.py  test_groups.py  test_links.py  test_me.py  test_milestones.py  test_network_failures.py  test_portfolios.py  test_project_files.py  test_project_metadata.py  test_project_permissions.py  test_projects.py  test_subtask_time_tracking.py  test_subtasks.py  test_swimlanes.py  test_tags.py  test_task_files.py  test_task_links.py  test_task_metadata.py  test_tasks.py  test_users.py
