[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanboard-cli"
version = "0.8.0"
requires-python = ">=3.11"
description = "Python SDK and CLI for the Kanboard JSON-RPC API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Brad Aton" }]
keywords = ["kanboard", "cli", "sdk", "project-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/geekmuse/kanboard-cli"
Repository = "https://github.com/geekmuse/kanboard-cli"
Changelog = "https://github.com/geekmuse/kanboard-cli/blob/main/CHANGELOG.md"
Documentation = "https://github.com/geekmuse/kanboard-cli#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "coverage>=7.0",
]

[project.scripts]
kanboard = "kanboard_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kanboard", "src/kanboard_cli"]

# ---------------------------------------------------------------------------
# Ruff — strict linting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
    "N",    # pep8-naming
    "D",    # pydocstyle
    "ANN",  # flake8-annotations (type hint enforcement)
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "D100",   # Missing docstring in public module (__init__.py files)
    "D104",   # Missing docstring in public package (__init__.py files)
    "ANN401", # Dynamically typed expressions (Any) allowed where needed
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "S"]
"src/**/__init__.py" = ["F401"]  # allow star/re-exports in __init__.py

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: mark test as requiring a live Docker-backed Kanboard instance",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

