[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanboard-sdk"
version = "1.2.0"
requires-python = ">=3.11"
description = "Python SDK for the Kanboard JSON-RPC API — typed models, structured exceptions, and complete API coverage"
readme = "README.md"
license = { file = "../LICENSE" }
authors = [{ name = "Brad Campbell", email = "oss-projects@bradleyscampbell.net" }]
keywords = ["kanboard", "sdk", "api", "project-management", "json-rpc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/geekmuse/kanboard-cli"
Repository = "https://github.com/geekmuse/kanboard-cli"
Documentation = "https://github.com/geekmuse/kanboard-cli/blob/main/docs/sdk-guide.md"
Changelog = "https://github.com/geekmuse/kanboard-cli/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel.force-include]
"../src/kanboard" = "kanboard"
